Added NPC PHP and NPC display logic. No NPC js implemented yet. Probably copying a lot of player for that.

--- a/styles/style.css
+++ b/styles/style.css
@@ -139,6 +139,15 @@ body, html
   margin: 1px auto;
 }
 
+.session-box
+{
+  border: 1px solid black;
+  border-radius: 1em;
+
+  padding: 2em;
+  margin: 1em;
+}
+
 .gear-box
 {
   display: flex;
